# context-engine

./: .contextignore  .env.example  .gitignore  .review-invariants.yml  AI_INDEXING_BEST_PRACTICES.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  EXAMPLES.md  GET_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_SETUP_INSTRUCTIONS.md  README.md  SETUP_CODEX_AND_ANTIGRAVITY.md  TECHNICAL_ARCHITECTURE.md  TESTING.md  TROUBLESHOOTING.md  YOUR_EXACT_FILES_TO_EDIT.txt  antigravity_mcp_config_READY_TO_USE.json  codex_config.example.toml  codex_config_READY_TO_USE.toml  docker-compose.yml  jest.config.js  package-lock.json  package.json  plan.md  verify-setup.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  review_diff.yml  sdk-sync.yml
docs/: API_REFERENCE.md  BENCHMARKING.md  CODEBASE_AUDIT_PLAN.md  CODEBASE_AUDIT_REPORT.md  EXAMPLES.md  MCP_IMPROVEMENTS.md  TESTING.md  TROUBLESHOOTING.md  TYPESCRIPT_RUST_GAP_ANALYSIS.md
plan/: plan mode.md
scripts/: bench.ts  smoke-test-planning.ts
scripts/ci/: review-diff.ts
src/: error.rs  index.ts  lib.rs  main.rs
src/config/: env.ts  mod.rs
src/http/: mod.rs
src/mcp/: handler.rs  mod.rs  progress.rs  prompts.rs  protocol.rs  resources.rs  server.rs  server.ts  serviceClient.ts  transport.rs
src/metrics/: mod.rs
src/reactive/: ReactiveReviewService.ts  config.ts  mod.rs  types.ts
src/reviewer/: mod.rs  reviewDiff.ts
src/sdk/: api_client.rs  blob.rs  credentials.rs  direct_context.rs  mod.rs  retry.rs  types.rs
src/service/: context.rs  memory.rs  mod.rs  planning.rs
src/tools/: index.rs  language.rs  memory.rs  mod.rs  navigation.rs  planning.rs  retrieval.rs  review.rs  search_specialized.rs  workspace.rs
src/types/: mod.rs  planning.rs  review.rs  search.rs
src/watcher/: FileWatcher.ts  mod.rs
src/worker/: IndexWorker.dev.ts  messages.ts
tests/: mcp_integration_test.rs  serviceClient.test.ts  setup.ts
tests/cache/: ResponseCache.test.ts
tests/integration/: timeoutResilience.test.ts
tests/manual/: test-ai-agent-executor.ts
tests/prompts/: planning.test.ts
tests/services/: approvalWorkflowService.test.ts  executionTrackingService.test.ts  planHistoryService.test.ts  (+3 more)
(+30 files in other folders)
